JDK 9+ comment